--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/ArpRouter/v16/Server/sqlite3
+/obj
+/.vs/ArpRouter/v16
